[package]
name = "mokaccino_py"
version = "0.5.0" # Note this is the python package version.
edition = "2024"
readme = "README.md"
description = "Match transient documents against a queries set."

license = "MIT"  # or "Apache-2.0", etc.
authors = ["Jerome Eteve <jerome.eteve@gmail.com"]
homepage = "https://github.com/jeteve/mokaccino_py"
repository = "https://github.com/jeteve/mokaccino_py"
documentation = "https://github.com/jeteve/mokaccino_py#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mokaccino"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version="0.27.1",features = ["abi3-py310"] }
pyo3-stub-gen = "0.17.2"
serde_json = "^1.0"
mokaccino_rust = { package="mokaccino", version = "0.5.0", features = ["send", "serde"] }
