[package]
name = "mokaccino_py"
version = "0.8.0-post1"
# Note this is the python package version. Keep in sync with the mokaccino_rust version.
# Use -postN suffixes for packaging revisions.
edition = "2024"
readme = "README.md"
description = "Match transient documents against a queries set."

license = "MIT"  # or "Apache-2.0", etc.
authors = ["Jerome Eteve <jerome.eteve@gmail.com"]
homepage = "https://github.com/jeteve/mokaccino_py"
repository = "https://github.com/jeteve/mokaccino_py"
documentation = "https://github.com/jeteve/mokaccino_py#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mokaccino"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version="0.27.1" }
pyo3-stub-gen =  { version = "0.17.2", optional = true }
serde_json = "^1.0"
h3o = "0.9.4"
mokaccino_rust = { package="mokaccino", version = "0.8.0", features = ["send", "serde"] }

[features]
stub-gen = ["dep:pyo3-stub-gen", "pyo3/abi3-py310" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true # 1.2M -> 952KB
opt-level = "z"  # 952Kb -> 789Kb  Optimize for size.
lto = true # 1.6Mo -> 1.2Mo Link time optimisation https://llvm.org/docs/LinkTimeOptimization.html
codegen-units = 1 # 1.2M -> 1.2M Mo No parralel code units, improve optimisation to just one code unit
#panic = "abort" # 1.5 -> 1.4 Mo  Behaviour change.  https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles