[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["README.md"]
features = ["pyo3/extension-module"]

[project]
name = "mokaccino"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Documentation = "https://github.com/jeteve/mokaccino_py#readme"
Issues = "https://github.com/jeteve/mokaccino_py/issues"
Source = "https://github.com/jeteve/mokaccino_py"